--- a/games/investment-odyssey/front-page.html
+++ b/games/investment-odyssey/front-page.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="../../styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- Firebase Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="../js/firebase-init.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
