--- a/games/investment-odyssey/index.html
+++ b/games/investment-odyssey/index.html
@@ -13,7 +13,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="../js/auth-service.js"></script>
+    <script src="../js/firebase-init.js"></script>
+    <script src="../js/student-auth.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
