--- a/games/investment-odyssey/ta-dashboard.html
+++ b/games/investment-odyssey/ta-dashboard.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="../js/firebase-init.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
