--- a/games/index.html
+++ b/games/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="js/firebase-init.js"></script>
+    <script src="js/firebase-core.js"></script>
+    <script src="js/auth-service.js"></script>
+    <script src="js/data-service.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
     <style>
@@ -160,17 +162,19 @@
                                 </div>
                             </div>
                             <div class="space-y-4">
-                                <div>
-                                    <label for="game-select-logged-in" class="block text-sm font-medium text-gray-700 mb-1">Select Game</label>
-                                    <select id="game-select-logged-in" class="w-full px-3 py-2 border border-gray-300 rounded-md bg-white">
-                                        <option value="">Choose a game...</option>
-                                        <option value="fiscal">Fiscal Balance Game</option>
-                                        <option value="investment">Investment Odyssey</option>
-                                    </select>
+                                <label class="block text-sm font-medium text-gray-700 mb-3">Select Game</label>
+                                <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-4">
+                                    <a href="fiscal-balance/index.html" class="flex items-center justify-center bg-blue-600 text-white py-3 px-4 rounded hover:bg-blue-700">
+                                        <i class="fas fa-chart-pie mr-2"></i> Fiscal Balance Game
+                                    </a>
+                                    <a href="investment-odyssey/index.html" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
+                                        <i class="fas fa-chart-line mr-2"></i> Investment Odyssey
+                                    </a>
                                 </div>
-                                <div class="flex space-x-3">
-                                    <button id="play-game-btn" class="flex-1 bg-purple-600 text-white py-2 px-4 rounded hover:bg-purple-700">Play Game</button>
-                                    <button id="logout-btn" class="px-4 py-2 border border-gray-300 rounded text-gray-700 hover:bg-gray-100">Logout</button>
+                                <div class="flex justify-end">
+                                    <button id="logout-btn" class="px-4 py-2 border border-gray-300 rounded text-gray-700 hover:bg-gray-100">
+                                        <i class="fas fa-sign-out-alt mr-2"></i> Logout
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -189,15 +193,15 @@
                                 <span class="text-gray-500">- or -</span>
                             </div>
                             <div>
-                                <label for="game-select" class="block text-sm font-medium text-gray-700 mb-1">Play Without Login</label>
-                                <select id="game-select" class="w-full px-3 py-2 border border-gray-300 rounded-md bg-white mb-3">
-                                    <option value="">Choose a game...</option>
-                                    <option value="fiscal">Fiscal Balance Game</option>
-                                    <option value="investment">Investment Odyssey</option>
-                                </select>
-                                <button id="play-single-btn" class="w-full bg-gray-600 text-white py-2 px-4 rounded hover:bg-gray-700">
-                                    <i class="fas fa-user mr-2"></i> Play Single Player
-                                </button>
+                                <label class="block text-sm font-medium text-gray-700 mb-3">Play Without Login</label>
+                                <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+                                    <a href="fiscal-balance/index.html" class="flex items-center justify-center bg-blue-600 text-white py-3 px-4 rounded hover:bg-blue-700">
+                                        <i class="fas fa-chart-pie mr-2"></i> Fiscal Balance Game
+                                    </a>
+                                    <a href="investment-odyssey/single-player.html" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
+                                        <i class="fas fa-chart-line mr-2"></i> Investment Odyssey
+                                    </a>
+                                </div>
                             </div>
                         </div>
 
@@ -251,7 +255,7 @@
         </div>
     </footer>
 
-    <script src="js/student-auth.js"></script>
+    <!-- No additional scripts needed here as they're already loaded in the head -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Check if user is logged in
@@ -282,59 +286,33 @@
                 StudentAuth.logout();
             });
 
-            // Play game button (logged in)
-            document.getElementById('play-game-btn').addEventListener('click', function() {
-                const gameType = document.getElementById('game-select-logged-in').value;
+            // Add click handlers for game links to clear session for single player mode
+            document.querySelectorAll('a[href="investment-odyssey/single-player.html"], a[href="fiscal-balance/index.html"]').forEach(function(link) {
+                link.addEventListener('click', function(e) {
+                    // Only for non-logged in users
+                    if (!StudentAuth.isLoggedIn()) {
+                        // Clear any existing session
+                        try {
+                            // Try to use SessionManager if available
+                            if (typeof SessionManager !== 'undefined') {
+                                SessionManager.clearSession();
+                            } else {
+                                // Fallback: clear relevant localStorage items manually
+                                localStorage.removeItem('studentId');
+                                localStorage.removeItem('studentName');
+                                localStorage.removeItem('enrollments');
+                                localStorage.removeItem('currentClassId');
+                                localStorage.removeItem('sessionTimestamp');
+                            }
 
-                if (!gameType) {
-                    alert('Please select a game');
-                    return;
-                }
-
-                // Redirect to the appropriate game
-                if (gameType === 'fiscal') {
-                    window.location.href = 'fiscal-balance/index.html';
-                } else if (gameType === 'investment') {
-                    window.location.href = 'investment-odyssey/index.html';
-                }
-            });
-
-            // Play single player button
-            document.getElementById('play-single-btn').addEventListener('click', function() {
-                const gameType = document.getElementById('game-select').value;
-
-                if (!gameType) {
-                    alert('Please select a game');
-                    return;
-                }
-
-                // Clear any existing session
-                try {
-                    // Try to use SessionManager if available
-                    if (typeof SessionManager !== 'undefined') {
-                        SessionManager.clearSession();
-                    } else {
-                        // Fallback: clear relevant localStorage items manually
-                        localStorage.removeItem('studentId');
-                        localStorage.removeItem('studentName');
-                        localStorage.removeItem('enrollments');
-                        localStorage.removeItem('currentClassId');
-                        localStorage.removeItem('sessionTimestamp');
+                            // Set single player mode
+                            localStorage.setItem('singlePlayerMode', 'true');
+                        } catch (error) {
+                            console.warn('Error clearing session:', error);
+                            // Continue anyway
+                        }
                     }
-                } catch (error) {
-                    console.warn('Error clearing session:', error);
-                    // Continue anyway
-                }
-
-                // Set single player mode
-                localStorage.setItem('singlePlayerMode', 'true');
-
-                // Redirect to the appropriate game
-                if (gameType === 'fiscal') {
-                    window.location.href = 'fiscal-balance/index.html';
-                } else if (gameType === 'investment') {
-                    window.location.href = 'investment-odyssey/single-player.html';
-                }
+                });
             });
 
             // Set callback for auth success
