--- a/games/investment-odyssey/front-page.html
+++ b/games/investment-odyssey/front-page.html
@@ -15,7 +15,9 @@
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="../js/firebase-init.js"></script>
+    <script src="../js/firebase-core.js"></script>
+    <script src="../js/auth-service.js"></script>
+    <script src="../js/data-service.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
