--- a/games/investment-odyssey/leaderboard.html
+++ b/games/investment-odyssey/leaderboard.html
@@ -14,7 +14,9 @@
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="../js/firebase-init.js"></script>
+    <script src="../js/firebase-core.js"></script>
+    <script src="../js/auth-service.js"></script>
+    <script src="../js/data-service.js"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
