--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="js/firebase-core.js"></script>
-    <script src="js/auth-service.js"></script>
+    <script src="js/simple-auth.js"></script>
     <script src="js/data-service.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
@@ -255,14 +255,13 @@
         </div>
     </footer>
 
-    <!-- No additional scripts needed here as they're already loaded in the head -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Check if user is logged in
-            if (StudentAuth.isLoggedIn()) {
+            if (SimpleAuth.isLoggedIn()) {
                 // Show logged in view
-                const user = StudentAuth.getCurrentUser();
-                document.getElementById('current-user-name').textContent = user.studentName;
+                const session = SimpleAuth.getSession();
+                document.getElementById('current-user-name').textContent = session.studentName;
                 document.getElementById('auth-status').classList.remove('hidden');
                 document.getElementById('auth-buttons').classList.add('hidden');
             } else {
@@ -273,52 +272,32 @@
 
             // Register button
             document.getElementById('register-btn').addEventListener('click', function() {
-                StudentAuth.showRegistrationModal();
+                SimpleAuth.showRegistrationModal();
             });
 
             // Login button
             document.getElementById('login-btn').addEventListener('click', function() {
-                StudentAuth.showLoginModal();
+                SimpleAuth.showLoginModal();
             });
 
             // Logout button
             document.getElementById('logout-btn').addEventListener('click', function() {
-                StudentAuth.logout();
+                SimpleAuth.logout();
             });
 
             // Add click handlers for game links to clear session for single player mode
             document.querySelectorAll('a[href="investment-odyssey/single-player.html"], a[href="fiscal-balance/index.html"]').forEach(function(link) {
                 link.addEventListener('click', function(e) {
                     // Only for non-logged in users
-                    if (!StudentAuth.isLoggedIn()) {
+                    if (!SimpleAuth.isLoggedIn()) {
                         // Clear any existing session
-                        try {
-                            // Try to use SessionManager if available
-                            if (typeof SessionManager !== 'undefined') {
-                                SessionManager.clearSession();
-                            } else {
-                                // Fallback: clear relevant localStorage items manually
-                                localStorage.removeItem('studentId');
-                                localStorage.removeItem('studentName');
-                                localStorage.removeItem('enrollments');
-                                localStorage.removeItem('currentClassId');
-                                localStorage.removeItem('sessionTimestamp');
-                            }
+                        SimpleAuth.clearSession();
 
-                            // Set single player mode
-                            localStorage.setItem('singlePlayerMode', 'true');
-                        } catch (error) {
-                            console.warn('Error clearing session:', error);
-                            // Continue anyway
-                        }
+                        // Set single player mode
+                        localStorage.setItem('singlePlayerMode', 'true');
                     }
                 });
             });
-
-            // Set callback for auth success
-            window.onAuthSuccess = function(userData) {
-                console.log('Authentication successful:', userData);
-            };
         });
     </script>
 </body>
