--- a/games/investment-odyssey/single-player.html
+++ b/games/investment-odyssey/single-player.html
@@ -16,7 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="../js/firebase-core.js"></script>
-    <script src="../js/auth-service.js"></script>
+    <script src="../js/simple-auth.js"></script>
     <script src="../js/data-service.js"></script>
 
     <!-- Other Scripts -->
