--- a/games/investment-odyssey/student-dashboard.html
+++ b/games/investment-odyssey/student-dashboard.html
@@ -14,7 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="../js/firebase-core.js"></script>
-    <script src="../js/auth-service.js"></script>
+    <script src="../js/simple-auth.js"></script>
     <script src="../js/data-service.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
